# Deed.so

./: .vercelignore  Anchor.toml  DEPLOYMENT.md  README.md  deed.so.html  index.html  package-lock.json  package.json  script.js  styles.css
programs/deed-solana/: Cargo.toml
programs/deed-solana/src/: lib.rs
tests/: deed-solana.ts
