[package]
name = "deed-solana"
version = "0.1.0"
edition = "2021"

[package.metadata]
rustc-args = ["--cfg=unexpected_cfgs=off"]

[lib]
crate-type = ["cdylib", "lib"]
name = "deed_solana"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"

[dev-dependencies]
anchor-lang = "0.30.1"